fix: realign headers with content in rich text

--- a/codeanon/static/css/bulma/_overrides.scss
+++ b/codeanon/static/css/bulma/_overrides.scss
@@ -411,7 +411,7 @@ table {
   font-family: $code-family;
 }
 
-.content p {
+.content * {
   font-size: 1.1rem;
   max-width: 60rem;
   text-align: justify;
